MOW-1409 Parameters for blur and smoothing

--- a/web/src/main/resources/org/geogebra/web/resources/html/app-template.html
+++ b/web/src/main/resources/org/geogebra/web/resources/html/app-template.html
@@ -79,6 +79,8 @@ var codebase = "<!--CODEBASE-->";
 				}
 			}
 			setParamFromURL("filename");
+			setParamFromURL("smoothing");
+			setParamFromURL("blur");
 			setParamFromURL("rounding");
 			setParamFromURL("ggbbase64");
 			if (isEmbed() || unbundled) {
