Fix conflict resolution

--- a/web/src/main/resources/org/geogebra/web/resources/html/app-header-beta.html
+++ b/web/src/main/resources/org/geogebra/web/resources/html/app-header-beta.html
@@ -38,6 +38,7 @@ window.addEventListener("resize", ggbHeaderResize);
 });
 </script>
 <nav class="GeoGebraFrame GeoGebraHeader <!--APP ID-->Header">
+<div class="upperHeader">
 <div class="headerStyle">
 <div tabindex="4000" class="gwt-ToggleButton flatButtonHeader menuBtn gwt-ToggleButton-up" role="button" aria-expanded="false" data-title="Main Menu" aria-label="Main Menu" aria-pressed="false">
 <input type="text" tabindex="-1" aria-hidden="true" style="opacity: 0; height: 1px; width: 1px; z-index: -1; overflow: hidden; position: absolute;">
@@ -49,6 +50,7 @@ window.addEventListener("resize", ggbHeaderResize);
 <div class="buttons" id="buttonsID">
 <!--SHARE-BUTTON-->
 <!--SIGNIN-BUTTON-->
+</div>
 </div>
 <!--UNDO-REDO-->
 </nav>
